--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>VibeControl</title>
 </head>
 <body>
-    <button id="button1">Vibe_ON</button>
-    <button id="button2">VIBE_OFF</button>
+<p><b>Note: </b>First Connection call takes some time. After the first input, please wait till things update.</p> 
+
+    <button id="button1" style="width:45%; height:auto;">Vibe_ON</button>
+    <button id="button2" style="width:45%; height:auto;">VIBE_OFF</button>
     <br><br>
-	<img id="button3" src="https://i.postimg.cc/66n19jKz/OIP.jpg" alt="Button 3" style="cursor:pointer; display:block;" width="150">
-    <img id="button4" src="https://i.postimg.cc/RZXDkWmB/bulb-10.jpg" alt="Button 4" style="cursor:pointer; display:none;" width="150">
+	<img id="button3" src="https://i.postimg.cc/66n19jKz/OIP.jpg" alt="Button 3" style="cursor:pointer; display:block;" width="100%">
+    <img id="button4" src="https://i.postimg.cc/RZXDkWmB/bulb-10.jpg" alt="Button 4" style="cursor:pointer; display:none;" width="100%">
 
    <!-- <img id="myImage" src="https://i.postimg.cc/d3rfpnsH/OIP-1.jpg" alt="Image" width="150"> -->
 
